--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"yarn": "^1.22.10"
 	},
 	"scripts": {
-		"start": "set NODE_OPTIONS=--openssl-legacy-provider&&set HTTPS=true&&set PORT=7000&&react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -41,13 +41,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"eslint": "^7.22.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0"
 	}
 }
